style: try 254211 to fix the header on mobile for android

--- a/Frontend/src/components/header/Header.module.css
+++ b/Frontend/src/components/header/Header.module.css
@@ -286,6 +286,42 @@ ul:has(+ #hamburgerNav:checked) {
 	transition-delay: 0s, 0s;
 }
 
+@media screen and (max-width: 1023px) {
+	.navList .orientationSwap {
+		grid-row: 1 / 3;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+		width: 100%;
+	}
+
+	.navList .navLogo {
+		margin-top: -5dvh;
+		width: 100%;
+		justify-content: center;
+	}
+
+	.navList .navLogo img {
+		height: auto;
+		width: auto;
+		max-width: 92vw;
+		max-height: 52dvh;
+	}
+
+	.navList .navLinks {
+		margin-top: -15dvh;
+		margin-bottom: 0;
+		align-self: center;
+		width: 100%;
+	}
+
+	.navList .navLinks ul {
+		height: auto;
+		gap: 1.5rem;
+	}
+}
+
 @media screen and (min-width: 1024px) {
 	.navList {
 		.orientationSwap {
